--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ProjectApp</string>
+    <string name="app_name">Speet</string>
 
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
@@ -8,12 +8,17 @@
     <string name="title_eventlist_detail">event list Detail</string>
     <string name="title_activity_left_menu">Speet</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="menu_events">Events</string>
+    <string name="menu_my_events">My events</string>
+    <string name="menu_invites">Invites</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_logout">Logout</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_example">Example action</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
