--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Speet</string>
 
+    <string name="pref_user_manager">User</string>
+    <string name="pref_user">User</string>
+
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
     <string name="title_activity_login">LoginActivity</string>
