--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,7 @@
     <string name="pref_user_manager">User</string>
     <string name="pref_user">User</string>
 
-    <string name="action_settings">Settings</string>
-    <string name="action_logout">Logout</string>
+    <string name="action_new_event">New Event</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_eventlist_list">Items</string>
     <string name="title_eventlist_detail">event list Detail</string>
@@ -24,4 +23,8 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_new_event">NewEventActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 </resources>
